// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-panel"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with hasNoBorder 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-panel pf-m-no-border"
  >
    <div
      class="pf-v6-c-panel__main"
    >
      <div
        class="pf-v6-c-panel__main-body"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with isFullHeight 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-panel pf-m-full-height"
  >
    <div
      class="pf-v6-c-panel__main"
    >
      <div
        class="pf-v6-c-panel__main-body"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with isGlass 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-panel pf-m-glass"
  >
    <div
      class="pf-v6-c-panel__main"
    >
      <div
        class="pf-v6-c-panel__main-body"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with isAutoHeight 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-panel pf-m-scrollable pf-m-scrollable-auto-height"
  >
    <div
      class="pf-v6-c-panel__main"
    >
      <div
        class="pf-v6-c-panel__main-body"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with isPill 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-panel pf-m-pill"
  >
    <div
      class="pf-v6-c-panel__main"
    >
      <div
        class="pf-v6-c-panel__main-body"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
